// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-switch.vue Demo-Value 绑定 1`] = `
<label
  checked="checked"
  class="root"
  disabled="disabled"
  tabindex="0"
  width="wide"
>
  <span
    class="button"
  />
   
  <span
    class="text"
    vusion-slot-name="default"
  >
    ON
  </span>
</label>
`;

exports[`u-switch.vue Demo-基本状态、只读和禁用 1`] = `
<div>
  <div
    class="root"
    direction="horizontal"
    type=""
    vusion-slot-name="default"
  >
    <label
      class="root"
      tabindex="0"
      with-text=""
    >
      <span
        class="button"
      />
       
      <span
        class="text"
        vusion-slot-name="default"
      />
    </label>
     
    <label
      class="root"
      readonly="readonly"
      tabindex="0"
    >
      <span
        class="button"
      />
       
      <span
        class="text"
        vusion-slot-name="default"
      />
    </label>
     
    <label
      class="root"
      disabled="disabled"
      tabindex="0"
    >
      <span
        class="button"
      />
       
      <span
        class="text"
        vusion-slot-name="default"
      />
    </label>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-switch.vue Demo-基本用法 1`] = `
<div>
  <label
    class="root"
    tabindex="0"
  >
    <span
      class="button"
    />
     
    <span
      class="text"
      vusion-slot-name="default"
    />
  </label>
</div>
`;

exports[`u-switch.vue Demo-基本用法 2`] = `
<div>
  <label
    class="root"
    tabindex="0"
  >
    <span
      class="button"
    />
     
    <span
      class="text"
      vusion-slot-name="default"
    />
  </label>
</div>
`;

exports[`u-switch.vue Demo-调整尺寸 1`] = `
<label
  class="root"
  size="small"
  style="width: 52px;"
  tabindex="0"
>
  <span
    class="button"
  />
   
  <span
    class="text"
    vusion-slot-name="default"
  >
    LIST
  </span>
</label>
`;
